[gd_scene load_steps=10 format=3 uid="uid://c5qh68wpw2lmh"]

[ext_resource type="Script" path="res://New/object/wire_fragment.gd" id="1_87lkj"]
[ext_resource type="AudioStream" uid="uid://dprdgt42o1l3b" path="res://Puzzle/SFX/SFX puzzle complete sfx.mp3" id="2_6jbwx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_ofp5p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lohuv"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sma2o"]
albedo_color = Color(0, 0.996078, 0.803922, 1)
emission_enabled = true
emission = Color(7.70092e-06, 0.996115, 0.804189, 1)
emission_energy_multiplier = 16.0

[sub_resource type="Animation" id="Animation_pkvq1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Powered_mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.4, 0.00108394, 0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Powered_mesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.776924, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Powered_mesh:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1yxwe"]
resource_name = "power"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Powered_mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.166667, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.4, 0.00108394, 0.4), Vector3(0.4, 0.786607, 0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Powered_mesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.776924, 0), Vector3(0, 0.00660534, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Powered_mesh:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_pv4kr"]
resource_name = "unpower"
length = 0.51
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Powered_mesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.00660533, 0), Vector3(0, 0.771865, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Powered_mesh:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.4, 0.786607, 0.4), Vector3(0.4, 0.00726494, 0.4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Powered_mesh:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ovxb0"]
_data = {
"RESET": SubResource("Animation_pkvq1"),
"power": SubResource("Animation_1yxwe"),
"unpower": SubResource("Animation_pv4kr")
}

[node name="Wire fragment" type="Node3D"]
script = ExtResource("1_87lkj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.95
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Wire_Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.396005, 0, 0, 0, 0.777697, 0, 0, 0, 0.396005, 0, 0, 0)
mesh = SubResource("CylinderMesh_ofp5p")
surface_material_override/0 = SubResource("StandardMaterial3D_lohuv")

[node name="Powered_mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.4, 0, 6.03983e-08, 0, 0.00108394, 0, -6.03983e-08, 0, -0.4, 0, -0.776924, 0)
visible = false
mesh = SubResource("CylinderMesh_ofp5p")
surface_material_override/0 = SubResource("StandardMaterial3D_sma2o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ovxb0")
}

[node name="puzzle_complete" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_6jbwx")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
